--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wasmer = "1.0.0-alpha3"
-wasmer-compiler-cranelift = "1.0.0-alpha3"
-wasmer-engine-jit = "1.0.0-alpha3"
+wasmer = { version = "1.0.0-alpha3", default-features = false, optional = false, features = ["jit", "cranelift"] }
 types = {path = "types"}
 nanoserde = "0.1.19"
 anyhow = "1.0.32"
