--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-types = { path = "../types"}
+nanoserde = "0.1.19"
+distilled-derive = { path = "../distilled-derive" }
