--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 [dependencies]
 nanoserde = "0.1.19"
 distilled-derive = { path = "../distilled-derive" }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+distilled = { path = ".." }
+anyhow = "1.0.32"
