--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Mikaël Fourrier <mikael.fourrier@pm.me>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 wasmer = { version = "1.0.0-alpha3", default-features = false, optional = false, features = ["jit", "cranelift"] }
 nanoserde = "0.1.19"
@@ -14,3 +12,7 @@ crossbeam-channel = "0.4.4"
 
 [workspace]
 members = ["distilled-derive", "wasm"]
+
+[profile.release]
+opt-level = "z"
+lto = true
