--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Mikaël Fourrier <mikael.fourrier@pm.me>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 nanoserde = "0.1.19"
 distilled-derive = { path = "../distilled-derive" }
@@ -13,3 +11,6 @@ distilled-derive = { path = "../distilled-derive" }
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 distilled = { path = ".." }
 anyhow = "1.0.32"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wee_alloc = "0.4"
