--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ wasmer = { version = "1.0.0-alpha4", default-features = false, optional = false,
 wasmer-wasi = { version = "1.0.0-alpha4", default-features = false, optional = false }
 wasmer-vm = { version = "1.0.0-alpha4", default-features = false, optional = false }
 anyhow = "1.0.32"
-crossbeam-channel = "0.4.4"
+smol = "1.2"
 
 [workspace]
 members = ["distilled-derive", "wasm"]
@@ -20,3 +20,4 @@ members = ["distilled-derive", "wasm"]
 [profile.release]
 opt-level = "z"
 lto = true
+debug = true
