--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -11,6 +11,7 @@ distilled-derive = { path = "../distilled-derive" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 anyhow = "1.0.32"
+smol = "1.2"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wee_alloc = "0.4"
